bench/results/h200_session3/triad_distill/training_logs/auto_continue_triad.log
=== Watcher v3 START Sun Apr 26 09:21:28 UTC 2026 ===
Soft seed 0 LER: 0.0271
PIVOT: hardlabel Triad seed 0
step 119000/160000  true=0.0182  triad=0.0182  11.1 s/s  ETA 61min
step 120000/160000  true=0.0822  triad=0.0460  11.1 s/s  ETA 60min
  >>> EVAL LER @ p=0.007: 0.03190
  >>> saved (ler=0.03190)
step 121000/160000  true=0.1001  triad=0.0392  11.1 s/s  ETA 58min
step 122000/160000  true=0.1561  triad=0.1062  11.1 s/s  ETA 57min
step 123000/160000  true=0.2222  triad=0.0443  11.1 s/s  ETA 55min
step 124000/160000  true=0.0500  triad=0.0673  11.1 s/s  ETA 54min
step 125000/160000  true=0.0135  triad=0.0225  11.1 s/s  ETA 52min
step 126000/160000  true=0.0771  triad=0.0566  11.1 s/s  ETA 51min
step 127000/160000  true=0.0881  triad=0.0527  11.1 s/s  ETA 49min
step 128000/160000  true=0.1061  triad=0.0574  11.1 s/s  ETA 48min
step 129000/160000  true=0.1070  triad=0.0283  11.1 s/s  ETA 46min
step 130000/160000  true=0.0971  triad=0.0466  11.1 s/s  ETA 45min
  >>> EVAL LER @ p=0.007: 0.02900
  >>> saved (ler=0.02900)
step 131000/160000  true=0.0661  triad=0.0518  11.1 s/s  ETA 43min
step 132000/160000  true=0.0319  triad=0.0518  11.1 s/s  ETA 42min
step 133000/160000  true=0.0647  triad=0.0277  11.1 s/s  ETA 40min
step 134000/160000  true=0.0391  triad=0.0231  11.1 s/s  ETA 39min
step 135000/160000  true=0.1122  triad=0.0505  11.1 s/s  ETA 37min
step 136000/160000  true=0.1588  triad=0.0596  11.1 s/s  ETA 36min
step 137000/160000  true=0.0464  triad=0.0149  11.1 s/s  ETA 34min
step 138000/160000  true=0.0425  triad=0.0347  11.1 s/s  ETA 33min
step 139000/160000  true=0.1582  triad=0.0635  11.1 s/s  ETA 31min
step 140000/160000  true=0.0643  triad=0.0390  11.1 s/s  ETA 30min
  >>> EVAL LER @ p=0.007: 0.02870
  >>> saved (ler=0.02870)
step 141000/160000  true=0.1632  triad=0.0512  11.1 s/s  ETA 28min
step 142000/160000  true=0.0673  triad=0.0232  11.1 s/s  ETA 27min
step 143000/160000  true=0.0780  triad=0.0409  11.1 s/s  ETA 25min
step 144000/160000  true=0.0824  triad=0.0323  11.1 s/s  ETA 24min
step 145000/160000  true=0.0604  triad=0.0209  11.1 s/s  ETA 22min
step 146000/160000  true=0.0626  triad=0.0624  11.1 s/s  ETA 21min
step 147000/160000  true=0.0488  triad=0.0162  11.1 s/s  ETA 19min
step 148000/160000  true=0.0452  triad=0.0431  11.1 s/s  ETA 18min
step 149000/160000  true=0.0746  triad=0.0202  11.1 s/s  ETA 16min
step 150000/160000  true=0.0671  triad=0.0408  11.1 s/s  ETA 15min
  >>> EVAL LER @ p=0.007: 0.02710
  >>> saved (ler=0.02710)
step 151000/160000  true=0.0799  triad=0.0368  11.1 s/s  ETA 13min
step 152000/160000  true=0.0394  triad=0.0277  11.2 s/s  ETA 12min
step 153000/160000  true=0.0831  triad=0.0314  11.2 s/s  ETA 10min
step 154000/160000  true=0.0382  triad=0.0441  11.2 s/s  ETA 9min
step 155000/160000  true=0.0472  triad=0.0511  11.2 s/s  ETA 7min
step 156000/160000  true=0.2591  triad=0.0407  11.2 s/s  ETA 6min
step 157000/160000  true=0.0644  triad=0.0495  11.2 s/s  ETA 4min
step 158000/160000  true=0.1966  triad=0.0261  11.2 s/s  ETA 3min
step 159000/160000  true=0.1217  triad=0.0428  11.2 s/s  ETA 1min
Training done. Best LER: 0.02710
Hardlabel seed 0 LER: 0.0271
PHASE 3: warm-init from existing PFWL3S, soft Triad teacher
  >>> EVAL LER @ p=0.007: 0.03450
step  41000/80000  bce=0.1201  kl=0.3291  11.1 s/s  ETA 59min
step  42000/80000  bce=0.0053  kl=0.2403  11.1 s/s  ETA 57min
step  43000/80000  bce=0.0694  kl=0.3507  11.1 s/s  ETA 56min
step  44000/80000  bce=0.1504  kl=0.3860  11.1 s/s  ETA 54min
step  45000/80000  bce=0.0147  kl=0.2522  11.1 s/s  ETA 53min
  >>> EVAL LER @ p=0.007: 0.03200
step  46000/80000  bce=0.1360  kl=0.3251  11.1 s/s  ETA 51min
step  47000/80000  bce=0.0325  kl=0.3085  11.1 s/s  ETA 50min
step  48000/80000  bce=0.0348  kl=0.3221  11.1 s/s  ETA 48min
step  49000/80000  bce=0.0795  kl=0.1887  11.1 s/s  ETA 47min
step  50000/80000  bce=0.0361  kl=0.3111  11.1 s/s  ETA 45min
  >>> EVAL LER @ p=0.007: 0.02870
  >>> saved (ler=0.02870)
step  51000/80000  bce=0.1091  kl=0.4436  11.1 s/s  ETA 44min
step  52000/80000  bce=0.0158  kl=0.3308  11.1 s/s  ETA 42min
step  53000/80000  bce=0.1399  kl=0.2712  11.1 s/s  ETA 41min
step  54000/80000  bce=0.0123  kl=0.2257  11.1 s/s  ETA 39min
step  55000/80000  bce=0.0633  kl=0.3191  11.1 s/s  ETA 38min
  >>> EVAL LER @ p=0.007: 0.03100
step  56000/80000  bce=0.0836  kl=0.3695  11.1 s/s  ETA 36min
step  57000/80000  bce=0.0223  kl=0.3308  11.1 s/s  ETA 35min
step  58000/80000  bce=0.1253  kl=0.3875  11.1 s/s  ETA 33min
step  59000/80000  bce=0.1960  kl=0.4170  11.1 s/s  ETA 32min
step  60000/80000  bce=0.1141  kl=0.2948  11.1 s/s  ETA 30min
  >>> EVAL LER @ p=0.007: 0.03160
step  61000/80000  bce=0.1341  kl=0.2851  11.1 s/s  ETA 29min
step  62000/80000  bce=0.0388  kl=0.3285  11.1 s/s  ETA 27min
step  63000/80000  bce=0.0488  kl=0.2642  11.1 s/s  ETA 26min
step  64000/80000  bce=0.1226  kl=0.2204  11.1 s/s  ETA 24min
step  65000/80000  bce=0.1077  kl=0.3848  11.1 s/s  ETA 23min
  >>> EVAL LER @ p=0.007: 0.02620
  >>> saved (ler=0.02620)
step  66000/80000  bce=0.0067  kl=0.2224  11.1 s/s  ETA 21min
step  67000/80000  bce=0.1185  kl=0.3801  11.1 s/s  ETA 20min
step  68000/80000  bce=0.1104  kl=0.1861  11.1 s/s  ETA 18min
step  69000/80000  bce=0.1181  kl=0.2969  11.1 s/s  ETA 17min
step  70000/80000  bce=0.1520  kl=0.3387  11.1 s/s  ETA 15min
  >>> EVAL LER @ p=0.007: 0.02850
step  71000/80000  bce=0.0231  kl=0.1901  11.1 s/s  ETA 14min
step  72000/80000  bce=0.0358  kl=0.2834  11.1 s/s  ETA 12min
step  73000/80000  bce=0.0177  kl=0.1885  11.1 s/s  ETA 11min
step  74000/80000  bce=0.0741  kl=0.3730  11.1 s/s  ETA 9min
step  75000/80000  bce=0.0583  kl=0.3053  11.1 s/s  ETA 8min
  >>> EVAL LER @ p=0.007: 0.02700
step  76000/80000  bce=0.0940  kl=0.3326  11.1 s/s  ETA 6min
step  77000/80000  bce=0.0701  kl=0.2614  11.1 s/s  ETA 5min
step  78000/80000  bce=0.1311  kl=0.3095  11.1 s/s  ETA 3min
step  79000/80000  bce=0.0588  kl=0.2955  11.1 s/s  ETA 2min
Training done. Best LER: 0.02620
Warm-init seed 0 LER: 0.0262
=== Triad-distillation experiment FINAL SUMMARY (v3 watcher, 3 branches) ===
Generated: Sun Apr 26 16:55:10 UTC 2026

Branch 1 (soft Triad from-scratch, seed 0): LER = 0.0271 (decision:   File "<string>", line 1
    x = float('0.0271'); print('GO' if x <=  else 'PIVOT')
                               ^^^^^^^^^
SyntaxError: expected 'else' after 'if' expression)
Branch 2 (hardlabel from-scratch, seed 0): LER = 0.0271 (decision:   File "<string>", line 1
    x = float('0.0271'); print('GO' if x <=  else 'PIVOT')
                               ^^^^^^^^^
SyntaxError: expected 'else' after 'if' expression)
Branch 3 (soft Triad warm-init from PFWL3S, seed 0): LER = 0.0262 (decision:   File "<string>", line 1
    x = float('0.0262'); print('GO' if x <=  else 'PIVOT')
                               ^^^^^^^^^
SyntaxError: expected 'else' after 'if' expression)

Threshold for 'GO seeds 1+2':  ('GO' = train more seeds, 'PIVOT' = move to next branch)
Goal: PF individual LER <= 2.38% (strictly beat the original Triad).

Eval results (only present if branch went happy path):
  Soft Triad: /workspace/persist/results/ensemble_triad_distill_d7.json
  Hardlabel: /workspace/persist/results/ensemble_triad_hardlabel_d7.json (if hardlabel happy)
  Warm-init: TBD (no full eval set up yet for warm-init branch)

Best ckpts (sorted by approach):
  Soft from-scratch: /workspace/persist/checkpoints/pathfinder_triad_distill_d7_seed{0,1,2}/
  Hardlabel from-scratch: /workspace/persist/checkpoints/pathfinder_triad_hardlabel_d7_seed{0,1,2}/
  Warm-init: /workspace/persist/checkpoints/pathfinder_triad_warminit_d7_seed{0,1,2}/

Logs: /workspace/auto_continue_triad.log
=== Watcher v3 EXIT Sun Apr 26 16:55:10 UTC 2026 ===
